--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/swagger": "^6.0.0",
     "fastify": "^4.7.0",
     "fastify-swagger": "^5.2.0",
     "uuid": "^9.0.0"
